# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "koopman_mpc",
    srcs = ["koopman_mpc.cc"],
    hdrs = ["koopman_mpc.h"],
    deps = [
        "//common",
        "//lcm:lcm_trajectory_saver",
        "//lcmtypes:lcmt_robot",
        "//multibody:multibody_solvers",
        "//multibody:utils",
        "//solvers:constraint_factory",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "mpc_trajectory_reciever",
    srcs = ["mpc_trajectory_reciever.cc"],
    hdrs = ["mpc_trajectory_reciever.h"],
    deps = [
        "//common",
        "//lcm:lcm_trajectory_saver",
        "@drake//:drake_shared_library",
    ],
)

cc_binary(
    name = "run_planar_walker_sim",
    srcs = ["run_planar_walker_sim.cc"],
    deps = [
        ":model_utils",
        "//common",
        "//examples/PlanarWalker:urdf",
        "//lcm:lcm_trajectory_saver",
        "//multibody:utils",
        "//multibody/kinematic",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "planar_osc_walking_gains",
    hdrs = ["PlanarWalker/planar_osc_walking_gains.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "planar_walker_koopman_mpc_gains",
    hdrs = ["PlanarWalker/planar_koopman_mpc_gains.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "planar_lipm_walking_speed_control",
    srcs = ["PlanarWalker/planar_lipm_walking_speed_control.cc"],
    hdrs = ["PlanarWalker/planar_lipm_walking_speed_control.h"],
    deps = [
        "//multibody:utils",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_binary(
    name = "run_planar_walker_visualizer",
    srcs = ["run_planar_walker_visualizer.cc"],
    deps = [
        ":model_utils",
        "//common",
        "//examples/PlanarWalker:urdf",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_koopman_mpc_process",
    srcs = ["run_koopman_mpc_process.cc"],
    deps = [
        ":koopman_mpc",
        ":model_utils",
        ":planar_walker_koopman_mpc_gains",
        "//common",
        "//examples/PlanarWalker:urdf",
        "//multibody:utils",
        "//multibody/kinematic",
        "//systems:dairlib_signal_lcm_systems",
        "//systems:robot_lcm_systems",
        "//systems/controllers:fsm_event_time",
        "//systems/controllers:time_based_fsm",
        "//systems/framework:lcm_driven_loop",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_osc_walking",
    srcs = ["run_osc_walking.cc"],
    deps = [
        ":koopman_mpc",
        ":model_utils",
        ":mpc_trajectory_reciever",
        ":planar_osc_walking_gains",
        "//common",
        "//lcm:lcm_trajectory_saver",
        "//multibody:utils",
        "//multibody/kinematic",
        "//systems:dairlib_signal_lcm_systems",
        "//systems:robot_lcm_systems",
        "//systems/controllers:time_based_fsm",
        "//systems/controllers/osc:operational_space_control",
        "//systems/controllers/osc:osc_tracking_data",
        "//systems/framework:lcm_driven_loop",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_osc_walking_lipm",
    srcs = ["run_osc_walking_lipm.cc"],
    deps = [
        ":model_utils",
        ":planar_lipm_walking_speed_control",
        ":planar_osc_walking_gains",
        "//common",
        "//lcm:lcm_trajectory_saver",
        "//multibody:utils",
        "//multibody/kinematic",
        "//systems:robot_lcm_systems",
        "//systems/controllers:fsm_event_time",
        "//systems/controllers:lipm_traj_gen",
        "//systems/controllers:swing_ft_traj_gen",
        "//systems/controllers:time_based_fsm",
        "//systems/controllers/osc:operational_space_control",
        "//systems/controllers/osc:osc_tracking_data",
        "//systems/framework:lcm_driven_loop",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "model_utils",
    srcs = ["PlanarWalker/planar_walker_model_utils.cc"],
    hdrs = ["PlanarWalker/planar_walker_model_utils.h"],
    deps = [
        "//common",
        "//examples/PlanarWalker:urdf",
        "//multibody:multibody_solvers",
        "//multibody:utils",
        "@drake//:drake_shared_library",
    ],
)

cc_binary(
    name = "visualize_positions_csv",
    srcs = ["visualize_positions_csv.cc"],
    data = glob(["examples/PlanarWalker/PlanarWalkerWithTorso.urdf"]),
    deps = [
        "//common",
        "//common:file_utils",
        "//multibody:multipose_visualizer",
        "//multibody:visualization_utils",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)
