# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "koopman_mpc",
    srcs = ["koopman_mpc.cc"],
    hdrs = ["koopman_mpc.h"],
    deps = [
        "//common",
        "//lcm:lcm_trajectory_saver",
        "//lcmtypes:lcmt_robot",
        "//multibody:multibody_solvers",
        "//multibody:utils",
        "//solvers:constraint_factory",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_binary(
    name = "run_planar_walker_sim",
    srcs = ["run_planar_walker_sim.cc"],
    deps = [
        "//common",
        "//examples/KoopmanMPC/PlanarWalker:planar_walker",
        "//examples/PlanarWalker:urdf",
        "//lcm:lcm_trajectory_saver",
        "//multibody:utils",
        "//multibody/kinematic",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_planar_walker_visualizer",
    srcs = ["run_planar_walker_visualizer.cc"],
    deps = [
        "//common",
        "//examples/KoopmanMPC/PlanarWalker:planar_walker",
        "//examples/PlanarWalker:urdf",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "get_cassie_srbd_model",
    srcs = ["get_cassie_srbd_model.cc"],
    deps = [
        "//examples/KoopmanMPC/Cassie:cassie",
        "@gflags",
    ],
)

cc_binary(
    name = "run_koopman_mpc_process",
    srcs = ["run_koopman_mpc_process.cc"],
    deps = [
        ":koopman_mpc",
        "//common",
        "//examples/KoopmanMPC/PlanarWalker:planar_walker",
        "//examples/PlanarWalker:urdf",
        "//multibody:utils",
        "//multibody/kinematic",
        "//systems:dairlib_signal_lcm_systems",
        "//systems:robot_lcm_systems",
        "//systems/controllers:fsm_event_time",
        "//systems/controllers:time_based_fsm",
        "//systems/framework:lcm_driven_loop",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_osc_walking",
    srcs = ["run_osc_walking.cc"],
    tags = ["manual"],
    deps = [
        ":koopman_mpc",
        "//common",
        "//examples/KoopmanMPC/PlanarWalker:planar_walker",
        "//lcm:lcm_trajectory_saver",
        "//multibody:utils",
        "//multibody/kinematic",
        "//systems:dairlib_signal_lcm_systems",
        "//systems:robot_lcm_systems",
        "//systems/controllers:mpc_trajectory_reciever",
        "//systems/controllers:time_based_fsm",
        "//systems/controllers/osc:operational_space_control",
        "//systems/controllers/osc:osc_tracking_data",
        "//systems/framework:lcm_driven_loop",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_osc_walking_lipm",
    srcs = ["run_osc_walking_lipm.cc"],
    tags = ["manual"],
    deps = [
        "//common",
        "//examples/KoopmanMPC/PlanarWalker:planar_walker",
        "//lcm:lcm_trajectory_saver",
        "//multibody:utils",
        "//multibody/kinematic",
        "//systems:robot_lcm_systems",
        "//systems/controllers:fsm_event_time",
        "//systems/controllers:lipm_traj_gen",
        "//systems/controllers:swing_ft_traj_gen",
        "//systems/controllers:time_based_fsm",
        "//systems/controllers/osc:operational_space_control",
        "//systems/controllers/osc:osc_tracking_data",
        "//systems/framework:lcm_driven_loop",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "visualize_positions_csv",
    srcs = ["visualize_positions_csv.cc"],
    data = glob(["examples/PlanarWalker/PlanarWalkerWithTorso.urdf"]),
    deps = [
        "//common",
        "//common:file_utils",
        "//multibody:multipose_visualizer",
        "//multibody:visualization_utils",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)
