# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "run_passive",
    srcs = ["run_passive.cc"],
    data = ["PlanarWalker.urdf"],
    deps = [
        "@drake//:drake_shared_library",
        "@gflags",
    ],
    tags = ["manual"],
    deprecation = "Attic/RigidBodyTree is deprecated.",
)

cc_binary(
    name = "test_contact",
    srcs = ["test_contact.cc"],
    data = ["PlanarWalker.urdf"],
    deps = [
        "@drake//:drake_shared_library",
        "@gflags",
    ],
    tags = ["manual"],
    deprecation = "Attic/RigidBodyTree is deprecated.",
)

cc_binary(
    name = "run_gait_dircon",
    srcs = ["run_gait_dircon.cc"],
    data = ["PlanarWalker.urdf"],
    deps = [
        "//systems/trajectory_optimization/dircon",
        "//common",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "visualize_gait",
    srcs = ["visualize_gait.cc"],
    data = ["PlanarWalkerWithTorso.urdf"],
    deps = [
        "//common",
        "//attic/systems/trajectory_optimization:dircon",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
    tags = ["manual"],
)

cc_library(
    name = "urdf",
    data = ["PlanarWalker.urdf",
            "PlanarWalkerWithTorso.urdf"]
)
