# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "animate_spirit",
    srcs = ["animate_spirit.cc"],
    hdrs = ["animate_spirit.h"],
    deps = ["//systems/trajectory_optimization/dircon",
        "//common",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],

)
cc_binary(
    name = "run_spirit_vis",
    srcs = ["run_spirit_vis.cc"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        "//systems/trajectory_optimization/dircon",
        "//common",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_spirit_stand",
    srcs = ["run_spirit_stand.cc"],
    data = ["spirit_drake.urdf"],
    deps = [
        "//systems/trajectory_optimization/dircon",
        "//multibody/kinematic",
        "//common",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_spirit_squat",
    srcs = ["run_spirit_squat.cc"],
    data = ["spirit_drake.urdf"],
    deps = [
        "//systems/trajectory_optimization/dircon",
        "//multibody/kinematic",
        "//common",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_spirit_jump",
    srcs = ["run_spirit_jump.cc"],
    data = ["spirit_drake.urdf"],
    deps = [
        ":animate_spirit",
        "//systems/trajectory_optimization/dircon",
        "//multibody/kinematic",
        "//common",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_spirit_best_stand",
    srcs = ["run_spirit_best_stand.cc"],
    data = ["spirit_drake.urdf"],
    deps = [
        "//systems/trajectory_optimization/dircon",
        "//multibody/kinematic",
        "//common",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)



cc_library(
    name = "urdf",
    data = ["spirit_drake.urdf"]
)

# package(default_visibility = ["//visibility:public"])

# load(
#     "@drake//tools/skylark:drake_cc.bzl",
#     "drake_cc_binary",
# )
# load("//tools/install:install_data.bzl", "install_data")
# ​
# drake_cc_binary(
#     name = "run_spirit_vis",
#     srcs = [
#         "run_spirit_vis.cc",
#     ],
#     data = [
#         ":models",
#         "//tools:drake_visualizer",
#         "spirit_drake.urdf"
#     ],
#     deps = [
#         "//common",
#         "//systems/primitives",
#         "@drake//:drake_shared_library",
#         "@gflags",
#         # "//common:find_resource",
#         # "//common:text_logging_gflags",
#         "//geometry:geometry_visualization",
#         "//lcm",
#         "//multibody/parsing",
#         "//multibody/plant",
#         "//systems/analysis",
#         "//systems/framework",
#         "@sdformat",
#     ],
# )
# ​
# install_data()