# -*- mode: python -*-
# vi: set ft=python :
load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:drake_lcm.bzl",
    "drake_lcm_cc_library",
    "drake_lcm_java_library",
    "drake_lcm_py_library",
)

cc_binary(
    name = "run_towr_simple_example",
    srcs = ["run_towr_simple_example.cc"],
    deps = [
        "@drake//:drake_shared_library",
        "@towr",
    ],
)

cc_binary(
    name = "towr_cassie",
    srcs = ["towr_cassie.cc"],
    deps = [
        "//examples/Cassie:cassie_fixed_point_solver",
        "//examples/Cassie:cassie_urdf",
        "//examples/Cassie:cassie_utils",
        "//multibody:multibody_solvers",
        "//multibody:utils",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
        "@towr",
    ],
)

cc_library(
    name = "urdf",
    data = [
        "PlanarWalker.urdf",
        "PlanarWalkerWithTorso.urdf",
    ],
)
