load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "cartpole_simulation",
    srcs = ["cartpole_simulation.cc"],
    deps = [
        "//common:find_resource",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_cartpole_lqr",
    srcs = ["run_cartpole_lqr.cc"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)
