load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "cartpole_simulation",
    srcs = ["cartpole_simulation.cc"],
    deps = [
        "//common:find_resource",
        "//systems:robot_lcm_systems",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_binary(
    name = "run_cartpole_lqr",
    srcs = ["run_cartpole_lqr.cc"],
    deps = [
        ":lqr",
        "//common:find_resource",
        "//systems:robot_lcm_systems",
        "//systems/controllers:linear_controller",
        "//systems/framework:lcm_driven_loop",
        "//systems/primitives",
        "@drake//:drake_shared_library",
        "@gflags",
    ],
)

cc_library(
    name = "lqr",
    srcs = ["lqr.cc"],
    hdrs = ["lqr.h"],
    deps = [
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "cartpole_input_interface",
    srcs = ["cartpole_input_interface.cpp"],
    hdrs = ["cartpole_input_interface.h"],
    deps = [
        "//examples/cartpole/epos:epos_cmd",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "cartpole_output_interface",
    srcs = ["cartpole_output_interface.cc"],
    hdrs = ["cartpole_output_interface.h"],
    deps = [
        "//examples/cartpole/epos:epos_cmd",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)
